// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "persist/src/persist.proto";
import "proto/src/proto.proto";
import "repr/src/global_id.proto";
import "storage/src/client/sources.proto";

package mz_storage.client;

service ProtoStorage {
    rpc CommandResponseStream (stream ProtoStorageCommand) returns (stream ProtoStorageResponse);
}

message ProtoCompaction {
    mz_repr.global_id.ProtoGlobalId id = 1;
    mz_persist.gen.persist.ProtoU64Antichain frontier = 2;
}

message ProtoAllowCompaction {
    repeated ProtoCompaction collections = 1;
}

message ProtoIngestSourceCommand {
    mz_repr.global_id.ProtoGlobalId id = 1;
    sources.ProtoIngestionDescription description = 2;
}

message ProtoIngestSources {
    repeated ProtoIngestSourceCommand ingestions = 1;
}

message ProtoFrontierUppersKind {
    repeated ProtoTrace traces = 1;
}

message ProtoTrace {
    mz_repr.global_id.ProtoGlobalId id = 1;
    repeated ProtoUpdate updates = 2;
}

message ProtoUpdate {
    uint64 timestamp = 1;
    int64 diff = 2;
}

message ProtoStorageCommand {
    oneof kind {
        ProtoIngestSources ingest_sources = 1;
        ProtoAllowCompaction allow_compaction = 2;
    }
}

message ProtoStorageResponse {
    message ProtoLinearizedTimestampBindingFeedback {
        uint64 timestamp = 1;
        mz_proto.ProtoU128 peek_id = 3;
    }
    oneof kind {
        ProtoFrontierUppersKind frontier_uppers = 1;
        ProtoLinearizedTimestampBindingFeedback linearized_timestamps = 2;
    }
}
